--- a/home.html
+++ b/home.html
@@ -115,9 +115,9 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 80%;
-            height: auto;
+            height: 80%;
             z-index: 1000;
-            padding: 30px;
+            padding: 30px; 
             color: #000;
             background-color: rgba(255, 255, 255, 0.7);
             cursor: default;
@@ -278,7 +278,7 @@
                     top: '50%',
                     left: '50%',
                     width: '80%',
-                    height: 'auto',
+                    height: '80%',
                     xPercent: -50,
                     yPercent: -50,
                     onComplete: () => {
