--- a/home.html
+++ b/home.html
@@ -28,12 +28,16 @@
 
         /* Header im Stil von UmbrelOS */
         header {
+            margin-top: 40px;
             padding: 40px;
             display: flex;
             font-size: large;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        header h1 {
+            text-shadow: 2px 2px 10px rgba(0,0,0,1);
         }
 
         /* Hauptcontainer mit vertikaler Ausrichtung */
@@ -144,7 +148,7 @@
 <body>
     <!-- Header -->
     <header>
-        Guten Tag, Max Mustermann
+        <h1>Guten Tag, Max Mustermann</h1>
     </header>
 
     <!-- Hauptcontainer mit vertikalen Abschnitten -->
