--- a/setting.html
+++ b/setting.html
@@ -259,7 +259,7 @@
                                 <li>Homepage</li>
                                 <li>Icon in Overview</li>
                                 <li>Leichte Verbesserungen im Design</li>
-                                <li>config.json Datei</li>
+                                <li>overview.json Datei</li>
                             </ul>
                         </div>
                     </details>
