--- a/home.html
+++ b/home.html
@@ -4,169 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UmbrelOS Ähnliche UI</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- GSAP Bibliothek einbinden -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
-        /* Grundlegendes Styling */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            min-height: 100vh;
-            background-image: url(/img/hintergrundbild.jpg);
-            background-color: gray;
-            background-size: cover;
-            background-position: center;
-            color: white;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Header im Stil von UmbrelOS */
-        header {
-            margin-top: 40px;
-            padding: 40px;
-            display: flex;
-            font-size: large;
-            align-items: center;
-            justify-content: center;
-        }
-
+        /* Benutzerdefinierte Stile */
         header h1 {
             text-shadow: 2px 2px 10px rgba(0,0,0,1);
         }
-
-        /* Hauptcontainer mit vertikaler Ausrichtung */
-        .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            gap: 40px; /* Abstand zwischen den Abschnitten */
-        }
-
-        /* Abschnitt */
-        .section {
-            width: 100%;
-            max-width: 1400px;
-        }
-
-        /* Hauptbereich */
-        .main-content {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            max-width: 1300px;
-            gap: 20px;
-            width: 100%;
-        }
-
-        /* Widgets und Apps */
-        .widgets {
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-            margin: 25px 0;
-        }
-
-        /* Widgets */
-        .widget {
-            background-color: rgba(255, 255, 255, 0.3);
-            backdrop-filter: blur(25px);
-            border-radius: 0.3rem;
-            padding: 20px;
-            width: calc(33.333% - 20px);
-            color: #fff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            position: relative;
-            overflow: hidden; /* Wichtig für den erweiterten Inhalt */
-            transition: transform 0.3s, background-color 0.3s;
-        }
-
-        .widget:hover {
-            transform: scale(1.05);
-            background-color: rgba(255, 255, 255, 0.4);
-        }
-
-        /* Apps */
-        .app {
-            background-color: rgba(0, 123, 255, 0.3); /* Unterschiedliche Farbe für Apps */
-            border-radius: 0.3rem;
-            padding: 10px;
-            width: 100px;
-            height: 100px;
-            color: #fff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            transition: transform 0.2s, background-color 0.3s;
-        }
-
-        .app:hover {
-            transform: scale(1.1);
-            background-color: rgba(0, 123, 255, 0.4);
-        }
-
-        .app img {
-            max-width: 60%;
-            max-height: 60%;
-            margin-bottom: 5px;
-        }
-
-        .app p {
-            font-size: 14px;
-            text-align: center;
-        }
-
-        @media (max-width: 1024px) {
-            .widget, .app {
-                width: calc(50% - 20px);
-            }
-            .app {
-                width: 80px;
-                height: 80px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .widget, .app {
-                width: 100%;
-            }
-            .app {
-                width: 60px;
-                height: 60px;
-            }
-        }
-
-        /* Overlay für Popover */
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .overlay.active {
-            display: flex;
-        }
-
-        /* Popover-Modal */
         .popover {
             background-color: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(25px);
@@ -181,38 +27,23 @@
             opacity: 0;
             transition: transform 0.3s ease, opacity 0.3s ease;
         }
-
-        .popover.active {
-            transform: scale(1);
-            opacity: 1;
-        }
-
-        .close-btn {
-            display: block;
-            position: absolute;
-            top: 10px;
-            right: 15px;
-            font-size: 24px;
-            cursor: pointer;
-            color: #000;
-        }
     </style>
 </head>
-<body>
+<body class="flex flex-col min-h-screen bg-gray-500 bg-cover bg-center text-white" style="background-image: url('/img/hintergrundbild.jpg');">
     <!-- Header -->
-    <header>
+    <header class="flex items-center justify-center ">
         <h1>Guten Tag, Max Mustermann</h1>
     </header>
 
     <!-- Hauptcontainer mit vertikalen Abschnitten -->
-    <div class="container" id="main-container">
+    <div class="flex-1 flex flex-col items-center p-5 gap-10" id="main-container">
         <!-- Dynamisch generierte Sektionen werden hier eingefügt -->
     </div>
 
     <!-- Overlay und Popover Modal -->
-    <div class="overlay" id="overlay">
-        <div class="popover" id="popover">
-            <span class="close-btn" id="close-btn">&times;</span>
+    <div class="fixed inset-0 bg-black bg-opacity-50 hidden justify-center items-center z-50" id="overlay">
+        <div class="bg-white bg-opacity-70 backdrop-blur-lg rounded-md p-5 w-4/5 h-4/5 shadow-2xl transform scale-0 opacity-0 transition-transform transition-opacity duration-300" id="popover">
+            <span class="absolute top-2 right-4 text-2xl cursor-pointer text-black" id="close-btn">&times;</span>
             <div id="popover-content">
                 <!-- Erweiterter Inhalt wird hier eingefügt -->
             </div>
@@ -289,10 +120,16 @@
         function createComponent(component) {
             if (component.type === 'widget') {
                 const div = document.createElement('div');
-                div.classList.add('widget');
-                div.setAttribute('data-widget', component.data.widget);
+                div.classList.add(
+                    'bg-white', 'bg-opacity-30', 'backdrop-blur-lg', 'rounded', 'p-5',
+                    'shadow-md', 'cursor-pointer', 'relative', 'overflow-hidden',
+                    'transition-transform', 'transition-colors', 'duration-300',
+                    'hover:scale-105', 'hover:bg-opacity-40'
+                );
+                // Responsive Breite: 1/3 auf groß, 1/2 auf mittel, voll auf klein
+                div.classList.add('w-full', 'sm:w-1/2', 'lg:w-1/3');
 
-                // Setzen des HTML-Inhalts direkt aus der JSON
+                div.setAttribute('data-widget', component.data.widget);
                 div.innerHTML = component.data.html;
 
                 // Event Listener für erweiterte Ansicht hinzufügen
@@ -305,12 +142,19 @@
                 return div;
             } else if (component.type === 'app') {
                 const div = document.createElement('div');
-                div.classList.add('app');
-                div.setAttribute('data-app', component.data.app);
+                div.classList.add(
+                    'bg-blue-500', 'bg-opacity-30', 'rounded', 'p-2.5',
+                    'shadow-md', 'cursor-pointer', 'relative',
+                    'flex', 'flex-col', 'items-center', 'justify-center',
+                    'transition-transform', 'transition-colors', 'duration-300',
+                    'hover:scale-110', 'hover:bg-opacity-40'
+                );
+                // Responsive Breite und Höhe
+                div.classList.add('w-24', 'h-24', 'sm:w-20', 'sm:h-20', 'md:w-24', 'md:h-24');
 
-                // Setzen des HTML-Inhalts und Hinzufügen des Logos
+                div.setAttribute('data-app', component.data.app);
                 div.innerHTML = `
-                    <img src="${component.data.logo}" alt="${component.data.app} Logo">
+                    <img src="${component.data.logo}" alt="${component.data.app} Logo" class="max-w-3/5 max-h-3/5 mb-1">
                     ${component.data.html}
                 `;
 
@@ -328,13 +172,13 @@
         // Funktion zum Erstellen von Sektionen
         function createSection(section) {
             const sectionElement = document.createElement('section');
-            sectionElement.classList.add('section');
+            sectionElement.classList.add('w-full', 'max-w-7xl');
 
             const mainContent = document.createElement('div');
-            mainContent.classList.add('main-content');
+            mainContent.classList.add('flex', 'flex-col', 'gap-5');
 
             const widgetsContainer = document.createElement('div');
-            widgetsContainer.classList.add('widgets');
+            widgetsContainer.classList.add('flex', 'flex-wrap', 'gap-5', 'my-6');
 
             section.components.forEach(component => {
                 const componentElement = createComponent(component);
@@ -376,16 +220,19 @@
         // Funktion zum Öffnen des Popovers
         function openPopover(content) {
             popoverContent.innerHTML = content;
-            overlay.classList.add('active');
-            popover.classList.add('active');
+            overlay.classList.remove('hidden');
+            popover.classList.remove('scale-0', 'opacity-0');
+            popover.classList.add('scale-100', 'opacity-100');
             gsap.fromTo(popover, { scale: 0, opacity: 0 }, { scale: 1, opacity: 1, duration: 0.3, ease: 'power1.out' });
+            overlay.classList.add('flex');
         }
 
         // Funktion zum Schließen des Popovers
         function closePopover() {
             gsap.to(popover, { scale: 0, opacity: 0, duration: 0.3, ease: 'power1.in', onComplete: () => {
-                popover.classList.remove('active');
-                overlay.classList.remove('active');
+                popover.classList.remove('scale-100', 'opacity-100');
+                overlay.classList.remove('flex');
+                overlay.classList.add('hidden');
             }});
         }
 
