--- a/webdesk-alpha.html
+++ b/webdesk-alpha.html
@@ -34,7 +34,7 @@
             --main-color: rgba(var(--color));
             --backcolor-hover: rgba(var(--color), 0.10);
             --backcolorgray-hover: rgba(0,0,0,0.05);
-            --background-color: #c9c9c9;
+            --background-color: #e7e7e7;
             --main-back: rgba(255, 255, 255);
             --text-color: #000000;
             --text-color-hover: white;
